fix: right alignment of property editors in device settings page

--- a/src/pages/hosts/[hostID]/devices/[deviceID]/index.module.scss
+++ b/src/pages/hosts/[hostID]/devices/[deviceID]/index.module.scss
@@ -29,6 +29,10 @@
     width: 100%;
     height: 60px;
     padding: 0 $content-padding;
+
+    &:last-child {
+      text-align: right;
+    }
   }
 }
 
